<resources>
    <string name="app_name">NepalBloodBankDonor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="type_title">Select Blood Group</string>
    <string name="qty_title">Select Blood Quantity</string>
    <string name="action_settings">Settings</string>
    <string-array name="gender">
        <item>gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="app_info_details"> Nepal Blood Bank Donor Android App is a life saving initiative, giving every Android smart phone user a chance to be a hero by donating blood and also search blood who need it . Basically the idea is if a smart phone and internet can help us to share various photographs, videos and text immediately to our well wishers, friends, family members, then why can not we share Blood through this and help needy people to provide blood in righ time. Basic idea behind this application is sharing of blood, that is whenever we require a blood in any case of emergency within span of minutes you should be able to reach to multiple users mentioning that you in urgent need of blood.Thus with this simple mobile application with innovative idea, you can get in contact of multiple people at a same time when ever you are in need of Blood. This is an online platform where donors and recipients or patients could meet together. It is our desire to use the advent of the internet to help the common people and it is simply an effort to bridge the gap between the donors and patients who are in dire need of help.
In this app user has to create an account with unique username and password. Then he can search for the blood donor on the basis of blood group and city location whenever he requires. Users can also provide the details of their blood group and current location so that he can be searched by the others recipients.</string>
    <string-array name="blood_group">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>
    <string name="choose_blood">Choose your blood group</string>
    <string-array name="district">
        <item>Kathmandu</item>
        <item>Bhaktapur</item>
        <item>Patan</item>
        <item>Kavre</item>
        <item>Dhading</item>
        <item>Kaski</item>

    </string-array>
    <string name="choose_district">Choose your district</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="choose_quantity">Choose blood quantity</string>

    <string name="tips_1">By following a few recommendations before, during and after your blood donation can help you make your donation experience as safe, successful and pleasant as possible.</string>
    <string name="tip1">Maintain a healthy iron level in your diet by eating iron rich foods, such as red meat, fish, poultry, beans, spinach, iron-fortified cereals and raisins</string>
    <string name="tip2">Get a good night\'s sleep.</string>
    <string name="tip3">Drink an extra 16 oz. of water or nonalcoholic fluids before the donation.</string>
    <string name="tip4">Eat a healthy meal before your donation. Avoid fatty foods, such as hamburgers, fries or ice cream before donating. (Fatty foods can affect the tests we do on your blood. If there is too much fat in your blood, your donation cannot be tested for infectious diseases and the blood will not be used for transfusion.)</string>
    <string name="tip5">If you are a platelet donor, remember that your system must be free of aspirin for two days prior to donation.</string>
    <string name="tip6">Remember to bring your donor card, driver\'s license or two other forms of ID.</string>
    <string name="tip7">Bring along a friend, so that you may both enjoy the benefits of giving blood.</string>
    <string name="tip8">Wear clothing with sleeves that can be raised above the elbow.</string>
    <string name="tip9">Let the person taking your blood know if you have a preferred arm and show them any good veins that have been used successfully in the past to draw blood.</string>
    <string name="tip10">Relax, listen to music, talk to other donors or read during the donation process.</string>
    <string name="tip11">Take the time to enjoy a snack and a drink in the refreshments area immediately after donating.</string>
    <string name="tip12">Drink an extra four (8 ounce) glasses of liquids and avoid alcohol over the next 24 hours.</string>
    <string name="tip13">Remove the wrap bandage (if you had one put on your arm) within the next hour.</string>
    <string name="tip14">Keep the strip bandage on for the next several hours.</string>
    <string name="tip15">To avoid a skin rash, clean the area around the strip bandage with soap and water.</string>
    <string name="tip16">Do not do any heavy lifting or vigorous exercise for the rest of the day.</string>
    <string name="tip17">If the needle site starts to bleed, apply pressure to it and raise your arm straight up for about 5-10 minutes or until bleeding stops.</string>
    <string name="tip18">If you experience dizziness or light headedness after donation, stop what you are doing and sit down or lie down until you feel better. Avoid performing any activity where fainting may lead to injury for at least 24 hours.</string>
    <string name="tip19">Learn more about your need for iron after blood donation at www.redcrossblood.org/iron</string>
    <string name="title_activity_blood_detail">BloodDetailActivity</string>

</resources>
