<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/app_info_background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/tips_1"
                />


            <TextView
                android:id="@+id/before"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="25dp"
                android:layout_marginTop="90dp"
                android:text="Before Your Donation"
                android:textColor="#ff16c00f" />

            <TextView
                android:id="@+id/tip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/tip1"
                android:layout_below="@+id/before"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip2"
                android:layout_below="@+id/tip1"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip3"
                android:layout_below="@+id/tip2"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip4"
                android:layout_below="@+id/tip3"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip5"
                android:layout_below="@+id/tip4"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip6"
                android:layout_below="@+id/tip5"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip7"
                android:layout_below="@+id/tip6"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/present"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="25dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tip7"
                android:text="During Your Donation"
                android:textColor="#ff16c00f" />
            <TextView
                android:id="@+id/tip8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip8"
                android:layout_below="@+id/present"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip9"
                android:layout_below="@+id/tip8"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip10"
                android:layout_below="@+id/tip9"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip11"
                android:layout_below="@+id/tip10"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/after"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="25dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tip11"
                android:text="After Your Donation"
                android:textColor="#ff16c00f" />
            <TextView
                android:id="@+id/tip12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip12"
                android:layout_below="@+id/after"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip13"
                android:layout_below="@+id/tip12"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip14"
                android:layout_below="@+id/tip13"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip15"
                android:layout_below="@+id/tip14"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip16"
                android:layout_below="@+id/tip15"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip17"
                android:layout_below="@+id/tip16"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip18"
                android:layout_below="@+id/tip17"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:id="@+id/tip19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/tip19"
                android:layout_below="@+id/tip18"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="25dp"
                />



        </RelativeLayout>
    </ScrollView>


</LinearLayout>
